Fixed bottom bar overlap issue

--- a/web_based_prototype/css/stylesheet.css
+++ b/web_based_prototype/css/stylesheet.css
@@ -49,7 +49,7 @@ header a{
 body {
 	width: 100%;
 	height: 100%;
-	padding-bottom:60px;
+
 }
 
 
@@ -534,6 +534,7 @@ select{
 	margin-bottom: 2%;
 	margin-top: 2%;
 	clear: left;
+	margin-bottom: 50px;
 }
 
 #done{
