--- a/web_based_prototype/css/stylesheetHome.css
+++ b/web_based_prototype/css/stylesheetHome.css
@@ -13,7 +13,9 @@
 	padding-bottom:5px;
 	margin-top:10px;
 }
-
+body{
+	padding-bottom:60px;
+}
  h1{
 	font-size:1em;
 
@@ -66,6 +68,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #834088;
+	border:none;
 }
 
 li {
