--- a/web_based_prototype/css/stylesheetProfile.css
+++ b/web_based_prototype/css/stylesheetProfile.css
@@ -6,6 +6,7 @@
 
 body {
     padding: 10px;
+	padding-bottom:600px;
 }
 
 
